Improve build process by addressing KAPT and Java compiler issues
Updates Gradle configurations, adds scripts, and provides documentation to resolve KAPT compilation errors.

Replit-Commit-Author: Agent
Replit-Commit-Session-Id: a66f6b30-afe1-4e03-a292-4ada7f45d6e8
Replit-Commit-Screenshot-Url: https://storage.googleapis.com/screenshot-production-us-central1/ed81440b-6d06-49ea-a8bc-f6bc068bb941/4c2b8fb6-af7a-4506-a765-04dfed432767.jpg