@@ -1,4 +1,4 @@
-# Solución para el Error de KAPT y Java Compiler
+# Solución Actualizada para el Error de KAPT y Java Compiler
 
 ## Problema detectado
 
@@ -10,73 +10,95 @@ java.lang.IllegalAccessError: superclass access check failed: class org.jetbrain
 
 Este error ocurre porque KAPT está intentando acceder a clases internas del compilador de Java que están restringidas por el sistema de módulos de Java 9 y versiones posteriores.
 
-## Soluciones disponibles
+## Solución implementada (Abril 2025)
 
-### Opción 1: Cambiar la versión de Java (Recomendada)
+Hemos implementado una serie de correcciones para mantener KAPT funcionando incluso con Java 11+:
+
+### 1. Configuraciones ampliadas de JVM en gradle.properties
+
+```
+org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8 \
+  --add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED \
+  --add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED \
+  --add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED \
+  --add-exports=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED \
+  --add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED \
+  --add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED \
+  --add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED \
+  --add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED \
+  --add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED \
+  --add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED
+```
+
+### 2. Configuraciones avanzadas para KAPT
+
+```
+kapt.incremental.apt=true
+kapt.use.worker.api=true
+kapt.include.compile.classpath=false
+kapt.verbose=true
+```
+
+### 3. Opciones adicionales del compilador Kotlin
+
+```kotlin
+kotlinOptions {
+    jvmTarget = '1.8'
+    freeCompilerArgs += [
+        "-Xjvm-default=all",
+        "-Xsam-conversions=class"
+    ]
+}
+```
+
+### 4. Scripts de reparación automática
+
+Hemos creado scripts para limpiar el proyecto y aplicar las soluciones:
+- `REPARAR_ERROR_KAPT_COMPLETAMENTE.bat` (Windows)
+- `reparar_error_kapt_completamente.sh` (Linux/Mac)
+
+## Otras soluciones disponibles
+
+### Opción 1: Cambiar la versión de Java (Más fiable)
 
 La solución más sencilla es utilizar Java 8, que es totalmente compatible con KAPT:
 
-1. Instala Java 8 (OpenJDK 8 o Oracle JDK 8) si aún no lo tienes
+1. Instala Java 8 (OpenJDK 8 o Oracle JDK 8) de [Eclipse Temurin](https://adoptium.net/es/temurin/releases/?version=8)
 2. En Android Studio, ve a:
    - **File → Settings → Build, Execution, Deployment → Build Tools → Gradle**
    - Cambia "Gradle JDK" a la versión 8 instalada
 
-Alternativamente, puedes especificar Java 8 en el archivo `gradle.properties` añadiendo:
-```
-org.gradle.java.home=C:\\Path\\To\\JDK8
-```
-
-### Opción 2: Actualiza a KSP (Reemplazo moderno de KAPT)
+### Opción 2: Migración a KSP (Intentado, pero con problemas)
 
 Kotlin Symbol Processing (KSP) es el reemplazo oficial de KAPT, más rápido y con mejor compatibilidad:
 
-1. Modifica el archivo `build.gradle` (nivel proyecto) añadiendo:
-   ```gradle
-   plugins {
-       id 'com.google.devtools.ksp' version '1.9.22-1.0.16' apply false
-   }
+1. Intentamos migrar a KSP, pero encontramos el siguiente error:
+   ```
+   Execution failed for task ':app:kspDebugKotlin'.
+   > A failure occurred while executing org.jetbrains.kotlin.compilerRunner.GradleCompilerRunnerWithWorkers$GradleKotlinCompilerWorkAction
+   > Internal compiler error. See log for more details
    ```
 
-2. En el archivo `app/build.gradle`, reemplaza:
-   ```gradle
-   // Reemplazar esto
-   id 'kotlin-kapt'
-   
-   // Por esto
-   id 'com.google.devtools.ksp'
-   ```
+2. Si deseas intentar la migración a KSP nuevamente, el proceso es:
+   - Reemplazar `id 'kotlin-kapt'` por `id 'com.google.devtools.ksp'`
+   - Reemplazar `kapt 'dependency'` por `ksp 'dependency'`
+   - Asegurar compatibilidad de versiones entre Kotlin y KSP
 
-3. Reemplaza todas las dependencias `kapt` por `ksp`:
-   ```gradle
-   // Cambiar esto
-   kapt 'androidx.room:room-compiler:2.6.1'
-   
-   // Por esto
-   ksp 'androidx.room:room-compiler:2.6.1'
-   ```
-
-### Opción 3: Modificar parámetros de JVM para compatibilidad
-
-Si necesitas mantener una versión de Java más reciente, puedes añadir flags para permitir acceso a módulos internos:
-
-1. En el archivo `gradle.properties`, añade:
-   ```
-   org.gradle.jvmargs=-Xmx2g -XX:MaxMetaspaceSize=512m --add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
-   ```
-
-## Compatibilidad entre versiones
+## Compatibilidad entre versiones (Actualizada)
 
 | Componente         | Java 8   | Java 11  | Java 17    |
 |--------------------|----------|----------|------------|
-| KAPT               | ✅ Completa | ⚠️ Parcial | ❌ Problemas |
+| KAPT (original)    | ✅ Completa | ❌ Error | ❌ Error |
+| KAPT (con nuestra solución) | ✅ Completa | ✅ Funciona | ✅ Debería funcionar |
 | KSP                | ✅ Completa | ✅ Completa | ✅ Completa  |
-| Android Gradle Plugin | ✅ Hasta AGP 7.x | ✅ Recomendado | ✅ Soportado para AGP 8.0+ |
+| Android Gradle Plugin | ✅ Hasta AGP 7.x | ✅ AGP 8.x | ✅ AGP 8.2+ |
 
 ## Recomendación final
 
-Para el proyecto Productiva, se recomienda:
+Para el proyecto Productiva, recomendamos:
 
-1. **Usar Java 8** como solución inmediata
-2. **Migrar a KSP** como solución a largo plazo, especialmente si planeas actualizar a versiones más recientes de las herramientas de desarrollo de Android
+1. **Usar nuestra solución de KAPT mejorada** como se ha implementado
+2. Si continúan los problemas, **cambiar a Java 8**
+3. Para una solución a largo plazo, **considerar migrar a KSP** cuando se solucionen los problemas de compatibilidad
 
-La migración a KSP también proporcionará una mejora significativa en el tiempo de compilación (hasta un 30-40% más rápido para procesamiento de anotaciones).
+La solución actual debería permitir continuar con el desarrollo sin problemas, manteniendo las herramientas de procesamiento de anotaciones funcionando correctamente.
